syntax = "proto3";
package proto;
option go_package = "pb/";
import "proto/models.proto";

message Empty {}

message Fields {
    bytes fields = 1;
}

message Event {
    uint32 id = 1;
    string type = 2;
}

message HandleRequest {
    uint32 add_server = 1;
    Event event = 2;
}

service Module {
    rpc Propagate(Empty) returns (Empty);
    rpc Properties(Empty) returns (Fields);
    rpc Handle(HandleRequest) returns (Empty);
}

message IDRequest {
    uint32 id = 1;
}

message QueryRequest {
    string query = 1;
}

message QueryResponse {
    repeated Host hosts = 1;
}

message LabelHostRequest{
    uint32 host_id=1;
    string label=2;
}

service Adapter {
    rpc GetHost(IDRequest) returns (Host);
    rpc GetSource(IDRequest) returns (Source);
    rpc GetScan(IDRequest) returns (Scan);

    rpc AddLabel(Label) returns (Empty);
    rpc AddFingerprint(Fingerprint) returns (Empty);
    rpc AddScan(Scan) returns (Empty);
    rpc AddSource(Source) returns (Empty);

    rpc LabelHost(LabelHostRequest) returns (Empty);

    rpc Query(QueryRequest) returns (QueryResponse);
}