syntax = "proto3";
package proto;
option go_package = "./proto"

message LabelRequest {
    // TODO FIXME: Implement this
}

message LabelResponse {
    // TODO FIXME: Implement this
}

service Rule {
    rpc Label(LabelRequest) returns (LabelResponse);
}