syntax = "proto3";
package proto;
option go_package = "./proto"

message ScanRequest {
    // TODO FIXME: Implement this
}

message ScanResponse {
    // TODO FIXME: Implement this
}

service Scanner {
    rpc Scan(ScanRequest) returns (ScanResponse);
}